@@ -86,6 +86,7 @@ public class NativeImageBuildStep {
     private static final String TRUST_STORE_SYSTEM_PROPERTY_MARKER = "-Djavax.net.ssl.trustStore=";
     private static final String MOVED_TRUST_STORE_NAME = "trustStore";
     public static final String APP_SOURCES = "app-sources";
+    public static final String ARTIFACT_RESULT_TYPE = "native";
 
     @BuildStep(onlyIf = NativeOrNativeSourcesBuild.class)
     void nativeImageFeatures(BuildProducer<NativeImageFeatureBuildItem> features) {
@@ -98,7 +99,7 @@ public class NativeImageBuildStep {
     ArtifactResultBuildItem result(NativeImageBuildItem image,
             CurateOutcomeBuildItem curateOutcomeBuildItem) {
         NativeImageBuildItem.GraalVMVersion graalVMVersion = image.getGraalVMInfo();
-        return new ArtifactResultBuildItem(image.getPath(), "native",
+        return new ArtifactResultBuildItem(image.getPath(), ARTIFACT_RESULT_TYPE,
                 graalVMVersion.toMap(),
                 ApplicationManifestConfig.builder()
                         .setApplicationModel(curateOutcomeBuildItem.getApplicationModel())
@@ -288,36 +289,50 @@ public class NativeImageBuildStep {
             } catch (Throwable t) {
                 throw imageGenerationFailed(t, isContainerBuild);
             }
-            IoUtils.copy(generatedExecutablePath, finalExecutablePath);
-            Files.delete(generatedExecutablePath);
-            if (nativeConfig.debug().enabled()) {
-                final String symbolsName = String.format("%s.debug", nativeImageName);
-                Path generatedSymbols = outputDir.resolve(symbolsName);
-                if (generatedSymbols.toFile().exists()) {
-                    Path finalSymbolsPath = outputTargetBuildItem.getOutputDirectory().resolve(symbolsName);
-                    IoUtils.copy(generatedSymbols, finalSymbolsPath);
-                    Files.delete(generatedSymbols);
-                }
-            }
 
-            // See https://github.com/oracle/graal/issues/4921
-            try (DirectoryStream<Path> sharedLibs = Files.newDirectoryStream(outputDir, "*.{so,dll}")) {
-                sharedLibs.forEach(src -> {
-                    Path dst = null;
-                    try {
-                        dst = Path.of(outputTargetBuildItem.getOutputDirectory().toAbsolutePath().toString(),
-                                src.getFileName().toString());
-                        log.debugf("Copying a shared lib from %s to %s.", src, dst);
-                        Files.copy(src, dst, StandardCopyOption.REPLACE_EXISTING);
-                    } catch (IOException e) {
-                        log.errorf("Could not copy shared lib from %s to %s. Continuing. Error: %s", src, dst, e);
+            if (!nativeConfig.isCreateNativeBundle()) {
+                IoUtils.copy(generatedExecutablePath, finalExecutablePath);
+                Files.delete(generatedExecutablePath);
+                if (nativeConfig.debug().enabled()) {
+                    final String symbolsName = String.format("%s.debug", nativeImageName);
+                    Path generatedSymbols = outputDir.resolve(symbolsName);
+                    if (generatedSymbols.toFile().exists()) {
+                        Path finalSymbolsPath = outputTargetBuildItem.getOutputDirectory().resolve(symbolsName);
+                        IoUtils.copy(generatedSymbols, finalSymbolsPath);
+                        Files.delete(generatedSymbols);
                     }
-                });
-            } catch (IOException e) {
-                log.errorf("Could not list files in directory %s. Continuing. Error: %s", outputDir, e);
-            }
+                }
 
-            System.setProperty("native.image.path", finalExecutablePath.toAbsolutePath().toString());
+                // See https://github.com/oracle/graal/issues/4921
+                try (DirectoryStream<Path> sharedLibs = Files.newDirectoryStream(outputDir, "*.{so,dll}")) {
+                    sharedLibs.forEach(src -> {
+                        Path dst = null;
+                        try {
+                            dst = Path.of(outputTargetBuildItem.getOutputDirectory().toAbsolutePath().toString(),
+                                    src.getFileName().toString());
+                            log.debugf("Copying a shared lib from %s to %s.", src, dst);
+                            Files.copy(src, dst, StandardCopyOption.REPLACE_EXISTING);
+                        } catch (IOException e) {
+                            log.errorf("Could not copy shared lib from %s to %s. Continuing. Error: %s", src, dst, e);
+                        }
+                    });
+                } catch (IOException e) {
+                    log.errorf("Could not list files in directory %s. Continuing. Error: %s", outputDir, e);
+                }
+
+                System.setProperty("native.image.path", finalExecutablePath.toAbsolutePath().toString());
+            } else {
+                String defaultNibFileName = runnerJar.getFileName().toString().replaceFirst(".jar$", ".nib");
+                String nibFileName = nativeConfig.bundle().name().isPresent() ? nativeConfig.bundle().name().get()
+                        : defaultNibFileName;
+                Path nibFileOriginPath = Path.of(runnerJar.getParent().toAbsolutePath().toString(), nibFileName);
+                Path nibFileTargetPath = Path.of(outputTargetBuildItem.getOutputDirectory().toAbsolutePath().toString(),
+                        nibFileName);
+                log.debug("Copying " + nibFileOriginPath + " to " + nibFileTargetPath);
+                IoUtils.copy(nibFileOriginPath, nibFileTargetPath);
+                Files.delete(nibFileOriginPath);
+                log.info("Native image Bundle available at " + nibFileTargetPath.toAbsolutePath());
+            }
 
             return new NativeImageBuildItem(finalExecutablePath,
                     new NativeImageBuildItem.GraalVMVersion(graalVMVersion.getFullVersion(),
@@ -698,8 +713,8 @@ public class NativeImageBuildStep {
                 return this;
             }
 
-            public Builder setGraalVMVersion(GraalVM.Version graalVMVersion) {
-                this.graalVMVersion = graalVMVersion;
+            public Builder setGraalVMVersion(io.quarkus.runtime.graal.GraalVM.Version graalVMVersion) {
+                this.graalVMVersion = new GraalVM.Version(graalVMVersion);
                 return this;
             }
 
@@ -746,6 +761,7 @@ public class NativeImageBuildStep {
                     }
                 }
 
+                nativeImageArgs.add("--enable-native-access=ALL-UNNAMED");//Avoid such warnings, as we're working to resolve them in JVM mode first.
                 nativeImageArgs.add("-J-Dfile.encoding=" + nativeConfig.fileEncoding());
 
                 if (enableSslNative) {
@@ -820,7 +836,7 @@ public class NativeImageBuildStep {
                  * Always install exit handlers, it will become the default and the flag will be deprecated
                  * in GraalVM for JDK 25 see https://github.com/quarkusio/quarkus/issues/47799
                  */
-                if (graalVMVersion.compareTo(GraalVM.Version.VERSION_25_0_0) < 0) {
+                if (graalVMVersion.compareTo(io.quarkus.runtime.graal.GraalVM.Version.VERSION_25_0_0) < 0) {
                     nativeImageArgs.add("--install-exit-handlers");
                 }
 
@@ -844,7 +860,7 @@ public class NativeImageBuildStep {
                  * @formatter:on
                  */
                 if (graalVMVersion.compareTo(GraalVM.Version.VERSION_24_2_0) >= 0
-                        && graalVMVersion.compareTo(GraalVM.Version.VERSION_25_0_0) < 0
+                        && graalVMVersion.compareTo(io.quarkus.runtime.graal.GraalVM.Version.VERSION_25_0_0) < 0
                         && (CPU.host() == CPU.x64)) {
                     addExperimentalVMOption(nativeImageArgs, "-H:+ForeignAPISupport");
                 }
@@ -910,6 +926,18 @@ public class NativeImageBuildStep {
                 if (!pie.isEmpty()) {
                     nativeImageArgs.add("-H:NativeLinkerOption=" + pie);
                 }
+                if (nativeConfig.isCreateNativeBundle()) {
+                    StringBuilder nativeBundleArg = new StringBuilder("--bundle-create");
+                    if (nativeConfig.bundle().name().isPresent()) {
+                        nativeBundleArg
+                                .append("=")
+                                .append(nativeConfig.bundle().name().get());
+                    }
+                    if (nativeConfig.bundle().dryRun()) {
+                        nativeBundleArg.append(",dry-run");
+                    }
+                    nativeImageArgs.add(nativeBundleArg.toString());
+                }
 
                 if (!nativeConfig.enableIsolates()) {
                     addExperimentalVMOption(nativeImageArgs, "-H:-SpawnIsolates");
@@ -952,6 +980,15 @@ public class NativeImageBuildStep {
                     if (!OS.WINDOWS.isCurrent() || containerBuild) {
                         // --enable-monitoring=heapdump is not supported on Windows
                         monitoringOptions.add(NativeConfig.MonitoringOption.HEAPDUMP);
+                    }
+
+                    if (graalVMVersion.compareTo(GraalVM.Version.VERSION_24_2_0) >= 0) {
+                        /*
+                         * After GraalVM/Mandrel 24.2, JCMD becomes available. The Quarkus thread dumper handles
+                         * SIGQUIT which interferes with JCMD. To avoid this problem, Quarkus must use the GraalVM
+                         * built-in thread dumper instead for versions beyond 24.2.
+                         */
+                        monitoringOptions.add(NativeConfig.MonitoringOption.THREADDUMP);
                     }
                 }
 
