@@ -47,6 +47,7 @@ import io.vertx.ext.web.RoutingContext;
  */
 public class BasicAuthenticationMechanism implements HttpAuthenticationMechanism {
 
+    public static final int PRIORITY = 2000;
     private static final Logger log = Logger.getLogger(BasicAuthenticationMechanism.class);
 
     private final String challenge;
@@ -67,6 +68,7 @@ public class BasicAuthenticationMechanism implements HttpAuthenticationMechanism
 
     private final Charset charset;
     private final Map<Pattern, Charset> userAgentCharsets;
+    private final int priority;
 
     /**
      * @deprecated use {@link BasicAuthenticationMechanism(String, boolean)}
@@ -77,15 +79,35 @@ public class BasicAuthenticationMechanism implements HttpAuthenticationMechanism
     }
 
     public BasicAuthenticationMechanism(final String realmName, final boolean silent) {
-        this(realmName, silent, StandardCharsets.UTF_8, Collections.emptyMap());
+        this(realmName, silent, PRIORITY);
+    }
+
+    public BasicAuthenticationMechanism(final String realmName, final boolean silent, int priority) {
+        this(realmName, silent, StandardCharsets.UTF_8, Map.of(), priority);
     }
 
     public BasicAuthenticationMechanism(final String realmName, final boolean silent,
-            Charset charset, Map<Pattern, Charset> userAgentCharsets) {
+            Charset charset, Map<Pattern, Charset> userAgentCharsets, int priority) {
         this.challenge = realmName == null ? BASIC : BASIC_PREFIX + "realm=\"" + realmName + "\"";
         this.silent = silent;
         this.charset = charset;
         this.userAgentCharsets = Map.copyOf(userAgentCharsets);
+        this.priority = priority;
+    }
+
+    private Charset getCharset(RoutingContext context) {
+        if (!userAgentCharsets.isEmpty()) {
+            String ua = context.request().headers().get(HttpHeaderNames.USER_AGENT);
+            if (ua != null) {
+                for (Map.Entry<Pattern, Charset> entry : userAgentCharsets.entrySet()) {
+                    if (entry.getKey().matcher(ua).find()) {
+                        return entry.getValue();
+                    }
+                }
+            }
+        }
+
+        return this.charset;
     }
 
     @Override
@@ -98,20 +120,14 @@ public class BasicAuthenticationMechanism implements HttpAuthenticationMechanism
 
                     String base64Challenge = current.substring(PREFIX_LENGTH);
                     String plainChallenge = null;
-                    byte[] decode = Base64.getDecoder().decode(base64Challenge);
-
-                    Charset charset = this.charset;
-                    if (!userAgentCharsets.isEmpty()) {
-                        String ua = context.request().headers().get(HttpHeaderNames.USER_AGENT);
-                        if (ua != null) {
-                            for (Map.Entry<Pattern, Charset> entry : userAgentCharsets.entrySet()) {
-                                if (entry.getKey().matcher(ua).find()) {
-                                    charset = entry.getValue();
-                                    break;
-                                }
-                            }
-                        }
+                    byte[] decode;
+                    try {
+                        decode = Base64.getDecoder().decode(base64Challenge);
+                    } catch (IllegalArgumentException illegalArgumentException) {
+                        return Uni.createFrom().failure(new AuthenticationFailedException(illegalArgumentException));
                     }
+
+                    Charset charset = getCharset(context);
 
                     plainChallenge = new String(decode, charset);
                     int colonPos;
@@ -168,6 +184,6 @@ public class BasicAuthenticationMechanism implements HttpAuthenticationMechanism
 
     @Override
     public int getPriority() {
-        return 2000;
+        return priority;
     }
 }
